tests/error/poly_errors/non_linear3.err
Error: Not defined for linear argument (at $FILE:19:4)
   | 
17 | @guppy
18 | def main() -> None:
19 |     foo(h)
   |     ^^^^^^ Cannot instantiate copyable type parameter `T` in type
   |            `forall T. (T -> None) -> None` with non-copyable type
   |            `qubit`

Guppy compilation failed due to 1 previous error
